# meowfetch

./: README.md  install.sh  meowfetch.py  pyproject.toml
meowfetch/: __init__.py  __main__.py  collectors.py  utils.py
meowfetch/data/: cats.json  colours.json  pkg_table.json
