[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meowfetch"
version = "1.0.0"
description = "A fetch script with a pawesome twist"
requires-python = ">=3.10"

[project.scripts]
meowfetch = "meowfetch.__main__:cli"

[tool.setuptools]
packages = ["meowfetch"]

[tool.setuptools.package-data]
meowfetch = ["data/*.json"]
